@@ -20,9 +20,11 @@ import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.function.Function;
 
+import static java.time.LocalDate.parse;
 import static java.lang.Math.min;
 import static java.util.Collections.*;
 import static java.util.stream.Collectors.*;
+import static org.apache.commons.lang3.StringUtils.isEmpty;
 import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AppealType.DC;
 import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AppealType.RP;
 import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCaseDefinition.*;
@@ -41,7 +43,8 @@ public class AsylumCaseUtils {
     public static final String JUDGE = "Tribunal";
     private static final String INCORRECT_APPLICANT_TYPE_ERROR_MESSAGE = "Correct applicant type is not present";
     private static final String INCORRECT_RESPONDENT_TYPE_ERROR_MESSAGE = "Correct respondent type is not present";
-
+    public static final String D_MMM_YYYY = "d MMM yyyy";
+    public static final String WITHDRAWN = "Withdrawn";
 
     private AsylumCaseUtils() {
         // prevent public constructor for Sonar
@@ -199,7 +202,7 @@ public class AsylumCaseUtils {
 
         if (applyForCosts.isPresent()) {
             List<IdValue<ApplyForCosts>> applyForCostsList = applyForCosts.get();
-            return applyForCostsList.get(0).getValue();
+            return applyForCostsList.getFirst().getValue();
         } else {
             throw new IllegalStateException("Applies for costs are not present");
         }
@@ -257,7 +260,7 @@ public class AsylumCaseUtils {
 
         List<String> appellantAddressAsList = new ArrayList<>();
 
-        addAppellantName(asylumCase, appellantAddressAsList);
+        appellantAddressAsList.add(getAppellantName(asylumCase));
 
         appellantAddressAsList.add(address.getAddressLine1().orElseThrow(() -> new IllegalStateException("appellantAddress line 1 is not present")));
         String addressLine2 = address.getAddressLine2().orElse(null);
@@ -538,7 +541,7 @@ public class AsylumCaseUtils {
 
         List<String> appellantAddressAsList = new ArrayList<>();
 
-        addAppellantName(asylumCase, appellantAddressAsList);
+        appellantAddressAsList.add(getAppellantName(asylumCase));
 
         appellantAddressAsList.add(oocAddressLine1);
         appellantAddressAsList.add(oocAddressLine2);
@@ -566,18 +569,25 @@ public class AsylumCaseUtils {
         return appellantAddressAsList;
     }
 
-    private static void addAppellantName(AsylumCase asylumCase, List<String> appellantAddressAsList) {
+    private static String getAppellantName(AsylumCase asylumCase) {
         String appellantGivenNames = asylumCase.read(AsylumCaseDefinition.APPELLANT_GIVEN_NAMES, String.class).orElse("");
         String appellantFamilyName = asylumCase.read(AsylumCaseDefinition.APPELLANT_FAMILY_NAME, String.class).orElse("");
         String fullName = appellantGivenNames + " " + appellantFamilyName;
-        appellantAddressAsList.add(fullName.substring(0, min(fullName.length(), 42)));
+        return fullName.substring(0, min(fullName.length(), 42));
     }
 
     public static @NonNull String getCompleteCasedReviewDate(AsylumCase asylumCase) {
         final String reviewDate = asylumCase
                 .read(AsylumCaseDefinition.COMPLETE_CASE_REVIEW_DATE, String.class)
                 .orElseThrow(() -> new IllegalStateException("Complete CaseReview Date is not present"));
-        return LocalDate.parse(reviewDate).format(DateTimeFormatter.ofPattern("d MMM yyyy"));
+        return LocalDate.parse(reviewDate).format(DateTimeFormatter.ofPattern(D_MMM_YYYY));
+    }
+
+    public static boolean hasStf24WeeksStatus(AsylumCase asylumCase) {
+        return asylumCase
+                .read(AsylumCaseDefinition.STF_24W_CURRENT_STATUS_AUTO_GENERATED, YesOrNo.class)
+                .map(value -> value.equals(YesOrNo.YES))
+                .orElse(false);
     }
 
     public static @NonNull Set<String> getApplicantEmail(AsylumCase asylumCase) {
@@ -591,5 +601,49 @@ public class AsylumCaseUtils {
                     .orElse(Collections.emptySet());
         }
         return emails;
+    }
+
+    public static String getAppealReceivedDate(AsylumCase asylumCase) {
+        String tribunalReceivedDate = getCaseDateDate(asylumCase, TRIBUNAL_RECEIVED_DATE);
+        String appealReceivedDate;
+        if (isEmpty(tribunalReceivedDate)) {
+            appealReceivedDate = getCaseDateDate(asylumCase, APPEAL_SUBMISSION_DATE);
+        } else {
+            appealReceivedDate = tribunalReceivedDate;
+        }
+
+        if (isEmpty(appealReceivedDate)) {
+            throw new IllegalStateException("Received date  is not present");
+        }
+        return LocalDate.parse(appealReceivedDate).format(DateTimeFormatter.ofPattern(D_MMM_YYYY));
+    }
+
+    public static String getHomeOfficeDecisionDate(AsylumCase asylumCase) {
+        final String homeOfficeDecisionDate = getCaseDateDate(asylumCase, HOME_OFFICE_DECISION_DATE);
+        return LocalDate.parse(homeOfficeDecisionDate).format(DateTimeFormatter.ofPattern(D_MMM_YYYY));
+    }
+
+    public static String populateStatutoryTimeFrame24wDate(AsylumCase asylumCase) {
+        String tribunalReceivedDate = getCaseDateDate(asylumCase, TRIBUNAL_RECEIVED_DATE);
+        String stf24WeeksAddedToDate;
+        if (isEmpty(tribunalReceivedDate)) {
+            String appealSubmissionDate = getCaseDateDate(asylumCase, APPEAL_SUBMISSION_DATE);
+            stf24WeeksAddedToDate = add24WeeksToDate(appealSubmissionDate);
+        } else {
+            stf24WeeksAddedToDate = add24WeeksToDate(tribunalReceivedDate);
+        }
+        return stf24WeeksAddedToDate;
+    }
+
+    private static String getCaseDateDate(AsylumCase asylumCase, AsylumCaseDefinition asylumCaseDefinition) {
+        return asylumCase
+                .read(asylumCaseDefinition, String.class)
+                .orElse("");
+    }
+
+    private static String add24WeeksToDate(String date) {
+        LocalDate appealDate = parse(date);
+        LocalDate stf24WeeksDate = appealDate.plusWeeks(24);
+        return stf24WeeksDate.format(DateTimeFormatter.ofPattern(D_MMM_YYYY));
     }
 }
